# Soleil25

./: .env  .gitignore  00K-Dev.ipynb  01K-Calibration.ipynb  01K-Time_scans.ipynb  Sample.py  environment.yml  galaxies.py  galaxies_ava.py  plot_test.py  pyproject.toml
