[project]
name = "soleil25a_code"
version = "0.1.0"
description = "Soleil25A Code"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab",
    'pandas',
    'numpy',
    'matplotlib',
    "tqdm",
    'ipykernel',
    'python-dotenv',
    'ipywidgets',
    "h5py>=3.13.0",
    "scipy>=1.15.3",
    "lmfit>=1.3.3",
    "ipympl>=0.9.7",
]
